<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeActivity"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">

    <TextView
        android:id="@+id/home_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:textAlignment="center"
        style="@style/Title"/>

    <TextView
        android:id="@+id/home_sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_sub_title"
        android:textStyle="bold"
        android:textAlignment="center"
        style="@style/subTile"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_start"
        android:layout_marginTop="15dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_log_out"
        android:layout_marginTop="15dp"/>




</LinearLayout>